Reverting some previous, now unnecesary changes